# teste-vekta-simple

./: .gitignore  README.md  docker-compose.yml
api/: .env.example  README.md  pyproject.toml
api/docker/: Dockerfile
api/docs/: API.md  ARCHITECTURE.md
api/docs/patterns/: error-handling.md  layers.md  naming.md  prompt-injection.md  testing.md
api/scripts/: install-mongodb-win10.ps1  mongodb.ps1  setup-local.ps1  start-mongodb.ps1
api/src/chatterbox/: __init__.py
api/src/chatterbox/application/services/: conversation_loader.py  message_turn.py  outgoing_user_message.py
api/src/chatterbox/application/use_cases/: get_conversation.py  list_conversations.py  send_message.py  send_message_stream.py  start_conversation.py
api/src/chatterbox/domain/: exceptions.py
api/src/chatterbox/domain/entities/: __init__.py  ai_stream_event.py  conversation.py  conversation_summary.py  message.py
api/src/chatterbox/domain/enums/: __init__.py  sender_role.py
api/src/chatterbox/domain/policies/: __init__.py  conversation_history.py  prompt_injection_guard.py  response_guard.py
api/src/chatterbox/domain/ports/: __init__.py  ai_service.py  conversation_repository.py
api/src/chatterbox/infrastructure/ai/: conversation_context.py  error_messages.py  fake_ai_service.py  gemini_service.py  prompts.py  response_finalizer.py
api/src/chatterbox/presentation/: dependencies.py  main.py
api/tests/: conftest.py  fakes.py
api/tests/integration/: test_api.py
api/tests/unit/: test_conversation_context.py  test_prompt_guards.py  test_use_cases.py
web/: .dockerignore  (+6 more)
(+72 files in other folders)
